feat: :green_heart: CP1D - Challenge 2
Add Jenkinsfile to CD
Add marker api.GET
Update todoApiTest.py with api.GET annotations

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 markers =
     api: pruebas de API, requiere aplicacion en ejecucion
+    read_only: pruebas de API solo GET, requiere aplicacion en ejecucion
